--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "ava test/*.js --tap"
   },
+  "engine": {
+      "node": ">=7.8.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/subeeshcbabu/confit-merger.git"
