--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A utility module to merge environment-aware confit based configurations",
   "main": "index.js",
   "scripts": {
-    "test": "ava test/*.js --tap"
+    "lint": "eslint .",
+    "test": "npm run lint && ava test/*.js --tap"
   },
   "engine": {
-      "node": ">=7.8.0"
+    "node": ">=7.8.0"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "confit": "^2.1.0"
   },
   "devDependencies": {
-    "ava": "^0.19.0"
+    "ava": "^0.19.0",
+    "eslint": "^3.19.0"
   }
 }
