--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint && ava test/*.js --tap"
+    "test": "npm run lint && ava test/*.js --tap",
+    "cover": "npm run lint && istanbul cover ava -- test/*.js --tap"
   },
   "engine": {
     "node": ">=7.8.0"
@@ -28,10 +29,12 @@
   },
   "homepage": "https://github.com/subeeshcbabu/confit-merger#readme",
   "dependencies": {
-    "confit": "^2.1.0"
+    "confit": "^2.1.0",
+    "shortstop-handlers": "^1.0.1"
   },
   "devDependencies": {
     "ava": "^0.19.0",
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "istanbul": "^0.4.5"
   }
 }
